--- a/templates/supervisor/dashboard.html
+++ b/templates/supervisor/dashboard.html
@@ -209,7 +209,9 @@
         </div>
     </div>
 
-    <!-- OVERTIME MANAGEMENT -->
+    <!-- OVERTIME MANAGEMENT - TEMPORARILY DISABLED -->
+    <!-- TODO: Uncomment when main.overtime_management route is created -->
+    <!--
     <div class="row mb-5">
         <div class="col-12">
             <h2 class="section-header">
@@ -257,6 +259,7 @@
             </a>
         </div>
     </div>
+    -->
 
     <!-- DATA MANAGEMENT -->
     <div class="row mb-5">
